fixing spacing

--- a/styles.css
+++ b/styles.css
@@ -21,9 +21,7 @@ p {
     margin-bottom: 30px;
 }
 
-#main-button {
-    background-color: #6EC1E4;
-}
+
 
 .navbar {
     background-color: rgba(196, 196, 196, 0.7);
